third_party/rust/chromium_crates_io/vendor/cxx-v1/tests/ui/struct_align.stderr
error: invalid repr(align) attribute: not a power of two
 --> tests/ui/struct_align.rs:3:18
  |
3 |     #[repr(align(3))]
  |                  ^

error: invalid repr(align) attribute: larger than 2^13
 --> tests/ui/struct_align.rs:9:18
  |
9 |     #[repr(align(1073741824))]
  |                  ^^^^^^^^^^

error: invalid repr(align) attribute: an arithmetic expression is not supported
  --> tests/ui/struct_align.rs:14:18
   |
14 |     #[repr(align(-2))]
   |                  ^^
